# bmod

./: .gitignore  CMakeLists.txt  README.md  config.h.in
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
modelconv/: CMakeLists.txt
modelconv/src/: main.c
res/shaders/: test.frag  test.vert  texture.frag  texture.vert
src/: game.c  game.h  game_camera.c  game_camera.h  game_input.c  game_input.h  input.h  logger.c  logger.h  main.c  types.h  util.h  window.c  window.h
src/glad/: glad.c  glad.h
src/object/: component.c  component.h  object.c  object.h
src/object/component/: component_mesh.c  component_mesh.h  component_mesh_renderer.c  component_mesh_renderer.h
src/render/: camera.c  camera.h  renderer.c  renderer.h  shader.c  shader.h
